--- a/gatsby-intro/posts/00-hello-world/hello-world.mdx
+++ b/gatsby-intro/posts/00-hello-world/hello-world.mdx
@@ -2,6 +2,7 @@
 title: Hello World!
 slug: hello-world
 author: Michał Małkiewicz
+image: ./images/gatsby-astronaut.png
 ---
 
 This is my first blog post with MDX.
