--- a/gatsby-intro/posts/00-hello-world/hello-world.mdx
+++ b/gatsby-intro/posts/00-hello-world/hello-world.mdx
@@ -5,4 +5,6 @@ author: Michał Małkiewicz
 image: ./images/gatsby-astronaut.png
 ---
 
+![My first image.](./images/gatsby-astronaut.png)
+
 This is my first blog post with MDX.
